// Copyright (c) Microsoft Corporation.
// Licensed under the Apache v2.0 license.

syntax = "proto3";
option go_package = "github.com/microsoft/moc/rpc/cloudagent/security";
package moc.cloudagent.security;

import "google/protobuf/wrappers.proto";
import "moc_cloudagent_identity.proto";
import "moc_common_common.proto";

message AuthenticationRequest {
	Identity Identity = 1;
}

message AuthenticationResponse {
	string Token = 1 [(sensitive) = true];
	google.protobuf.BoolValue Result = 2;
	string  Error = 3;
}

service AuthenticationAgent {
	rpc Login(AuthenticationRequest) returns (AuthenticationResponse) {}
}
